--- a/app/views/shared/_offcanvas_wrap.html.erb
+++ b/app/views/shared/_offcanvas_wrap.html.erb
@@ -1,4 +1,4 @@
-<div class="offcanvas offcanvas-end offcanvas_product w-50" tabindex="-1" id="offcanvasProduct" aria-labelledby="offcanvasRightLabel" 
+<div class="offcanvas" tabindex="-1" id="offcanvasWrap" aria-labelledby="offcanvasRightLabel" 
     data-bs-scroll="true">
   <div class="offcanvas-header">
     <h5 class="offcanvas-title" id="offcanvasRightLabel"></h5>
