--- a/app/views/clients/show.turbo_stream.erb
+++ b/app/views/clients/show.turbo_stream.erb
@@ -1,13 +1,13 @@
 <%= turbo_stream.replace "offcanvasWrap" do %>
 
-<div class="offcanvas offcanvas-end offcanvas_product w-50" tabindex="-1" id="offcanvasWrap" aria-labelledby="offcanvasRightLabel" 
+<div class="offcanvas offcanvas-end offcanvas_client w-50" tabindex="-1" id="offcanvasWrap" aria-labelledby="offcanvasRightLabel" 
     data-bs-scroll="true" data-controller="offcanvas" data-action="turbo:frame-load->offcanvas#show turbo:submit-end->offcanvas#hide">
   <div class="offcanvas-header">
     <h5 class="offcanvas-title" id="offcanvasRightLabel"></h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
-    <%= render partial: "products/show" %>
+    <%= render partial: "clients/show" %>
   </div>
 </div>
 
