--- a/app/views/products/_show.html.erb
+++ b/app/views/products/_show.html.erb
@@ -1,10 +1,10 @@
 
-<div class="row mt-3">
+
 <div class="col-12 mb-3">
   (<%= @product.insid %>) <%= @product.title %> - <%= @product.price %>
 </div>
 
-<div class="col-6">
+<div class="col-12">
   <div class="table-responsive">
     <table class="table table-hover table-condensed">
     <thead>
@@ -16,24 +16,41 @@
       </tr>
     </thead>
 
-    <tbody id="items_table">
+    <tbody>
       <% @product.variants.each do |variant| %>
       <tr>
-          <td><%= link_to "#{variant.insid }", "http://"+current_user.insints.first.subdomen+"/product_by_id/"+variant.product.insid.to_s+"?variant_id="+variant.insid.to_s, target: "_blank" %></td>
-          <td><%= variant.sku %></td>
-          <td><%= variant.quantity %></td>
-          <td><%= variant.price %></td>
-        </tr>
+        <td><%= link_to "#{variant.insid }", "http://"+current_user.insints.first.subdomen+"/product_by_id/"+variant.product.insid.to_s+"?variant_id="+variant.insid.to_s, target: "_blank" %></td>
+        <td><%= variant.sku %></td>
+        <td><%= variant.quantity %></td>
+        <td><%= variant.price %></td>
+      </tr>
       <% end %>
     </tbody>
   </table>
   </div>
 </div>
 
-</div>
+<div class="col-12 mb-3">Избранное</div>
 
-<div class="row">
-  <div class="col-1 btn-group mt-5">
-    <%# link_to 'Back', products_path, class: 'btn btn-outline-success btn-sm' %>
+<div class="col-12">
+  <div class="table-responsive">
+    <table class="table table-hover table-condensed">
+    <thead>
+      <tr class="bg-success">
+        <th>Клиент</th>
+        <th>Дата добавления</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @product.favorites.each do |fav| %>
+      <tr>
+        <td><%= fav.client.fio %></td>
+        <td><%= fav.created_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
   </div>
 </div>
+
