--- a/app/views/products/show.turbo_stream.erb
+++ b/app/views/products/show.turbo_stream.erb
@@ -6,7 +6,7 @@
     <h5 class="offcanvas-title" id="offcanvasRightLabel"></h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
-  <div class="offcanvas-body">
+  <div class="offcanvas-body pt-0">
     <%= render partial: "products/show" %>
   </div>
 </div>
