--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,13 @@
   </head>
   <body class="<%= current_page_path_as_class %> d-flex flex-column h-100">
     <%= tag.header(class: user_signed_in? ? 'bg-444444': '') do %>
-      <div class="header-wrap container d-flex align-items-center py-0">
+      <div class="header-wrap container-fluid d-flex align-items-center py-0">
         <%= render 'layouts/navigation_for_sign_in' if user_signed_in? %>
         <%= render 'layouts/navigation_not_for_sign_in' if !user_signed_in? %>
       </div>
     <% end %>
     <main class="<%= current_page_path_as_class%>">
-      <%= tag.div(class: user_signed_in? ? 'container' : 'container-fluid px-0', id: 'main-content') do %>
+      <%= tag.div(class: user_signed_in? ? 'container-fluid' : 'container-fluid px-0', id: 'main-content') do %>
         <%= render "shared/modal_wrap"%>
         <%= render "shared/offcanvas_wrap" %>
         <%= tag.div(class: 'position-fixed z-1 top-0 end-0 p-3 w-50', id: 'our_flash') do %>
