--- a/app/views/mycases/_form.html.erb
+++ b/app/views/mycases/_form.html.erb
@@ -47,7 +47,7 @@
   <div class="row">
     <div class="col-2 btn-group mt-5">
       <%= f.button :submit, 'Сохранить', class: 'btn btn-success' %>
-      <%= link_to close_icon, :back, class: 'btn btn-outline-primary'  %>
+      <%= link_to close_icon, mycases_path, class: 'btn btn-outline-primary'  %>
     </div>
   </div>
 <% end %>
