update product and client

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,4 +1,10 @@
 
+.fs-7 {
+  font-size: 0.9rem!important;
+}
+.fs-8 {
+  font-size: 0.8rem!important;
+}
 
 /*** Navbar ***/
 .navbar-light .navbar-nav .nav-link {
