--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -26,7 +26,7 @@
     <thead>
       <tr class="bg-success">
         <th># (INS)</th>
-        <th>Создан</th>
+        <th style="width:120px;">Создан</th>
         <th></th>
         <th>Название</th>
         <th></th>
