--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -60,9 +60,9 @@
         </div>
         <div class="col-3 col-md d-none d-md-block">
           <h5>Способы оплаты</h5>
-          <ul class="text-small">
-            <li>Счет для юр лиц</li>
-            <li><%= image_tag "/visa-master.png", style:"max-width: 120px;"%></li>
+          <ul class="text-small list-group list-group-horizontal d-flex align-items-center">
+            <li class="list-group-item bg-transparen border-0 px-1 bg-light">Счет для юр лиц</li>
+            <li class="list-group-item bg-transparen border-0 px-1 bg-light"><%= image_tag "/visa-master.png", style:"max-width: 120px;"%></li>
           </ul>
           <p>Прием платежей организован агрегатором
             <a class="text-muted" rel="nofollow noopener" href="http://www.paymaster.ru/" target="_blank">Paymaster</a>
