--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row mt-3 mb-3">
   <div class="h1">Общая информация</div>
 </div>
-<div class="row mt-3 mb-3">
+<div class="row mt-3 mb-3 gap-5">
   <div class="col d-flex flex-column">
     <div class="">
       <span class="fw-bold">Имя:</span>
